--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		If you're plugin is for game, instead use :
 		<groupId>wtf.spigot.game</groupId>
 	-->
-	<artifactId>freebuildcore</artifactId>
+	<artifactId>Over2CraftFreebuildCore</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 
 	<properties>
